--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node src/index.ts",
+    "dev": "ts-node-dev --files --respawn src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
