--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --files --respawn src/index.ts",
-    "build": "tsc",
+    "build": "tsc -p .",
     "start": "node dist/index.js"
   },
   "keywords": [],
